<?xml version="1.0"?>
<package>
    <name>balazs_tutorials</name>
    <version>0.1.0</version>
    <description>The balazs_tutorials package</description>
    <maintainer email="balazs@jhu.edu">Balazs P Vagvolgyi</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_cpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_cpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
