<?xml version="1.0"?>
<package>
    <name>balazs_tutorials</name>
    <version>0.1.0</version>
    <description>The balazs_tutorials package</description>
    <maintainer email="balazs@jhu.edu">Balazs P Vagvolgyi</maintainer>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_cpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>rqt_gui_cpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>

    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
